--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "name": "MagicCyrillic",
     "version": "0.1.0",
     "description": "Learn Cyrillic by magically transforming letters on websites.",
-    "permissions": ["activeTab", "storage"],
+    "permissions": ["activeTab", "tabs", "storage"],
 
     "action": {
 		"default_popup": "popup.html"
@@ -12,9 +12,12 @@
 	"content_scripts": [
 		{
 			"matches": ["<all_urls>"],
-			"js": ["content.js"],
-			"run_at": "document_end"
+			"js": ["content.js"]
+
 		}
 		
-		]
+		],
+    "background": {
+            "service_worker": "background.js"
+          }
 }
